src/objects/CBGA_Solution_Option__c.object
<CustomObject>
    <description>Each story has a set of solutions. These are configurable, means we can configure the datatype of the solution options.</description>
    <fields>
        <fullName>CB_Reward__c</fullName>
        <description>Amount is 1.72 for Best Option, 0 for OK Option, and -2.0 for Bad Option</description>
        <formula>CASE(CB_Score__c,
     &quot;Bad&quot;, -1 * (CB_Story__r.CB_Block__r.CB_Cost__c * 2.0),
     &quot;Best&quot;,CB_Story__r.CB_Block__r.CB_Cost__c * 1.72,
     0 )</formula>
        <inlineHelpText>Amount is 1.72 for Best Option, 0 for OK Option, and -2.0 for Bad Option</inlineHelpText>
        <label>Reward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_Score__c</fullName>
        <description>Score would assigned to each Solution option. Based on the solution option selection and score further actions would be taken.</description>
        <inlineHelpText>Score would assigned to each Solution option. Based on the solution option selection and score further actions would be taken.</inlineHelpText>
        <label>Score</label>
        <picklist>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_Sequence__c</fullName>
        <description>This field maintains the Sequence in which solution options to be displayed.</description>
        <inlineHelpText>This field maintains the Sequence in which solution options to be displayed.</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Solution_Selection_Description__c</fullName>
        <description>This field contains the description, which would be seen after user selects the option. It will give detailed description of the option, chosen.</description>
        <inlineHelpText>This field contains the description, which would be seen after user selects the option. It will give detailed description of the option, chosen(With reasoning).</inlineHelpText>
        <label>Solution Selection Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CB_Solution_Text__c</fullName>
        <description>This field contains the solution option text, which user is going to select from UI.</description>
        <inlineHelpText>This field contains the solution option text, which user is going to select from UI.</inlineHelpText>
        <label>Solution Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CB_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Story to which solution belongs.</description>
        <inlineHelpText>Story to which solution belongs.</inlineHelpText>
        <label>Story</label>
        <referenceTo>CBGA_Story__c</referenceTo>
        <relationshipLabel>Solutions Options</relationshipLabel>
        <relationshipName>Solutions_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Solution Option</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Solution Options Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sequence_Number_Must_be_Greater_than_0</fullName>
        <active>true</active>
        <description>Solution Option must be Greater than 0</description>
        <errorConditionFormula>CB_Sequence__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>CB_Sequence__c</errorDisplayField>
        <errorMessage>Sequence should be more than 0</errorMessage>
    </validationRules>
</CustomObject>